--- a/app/src/main/res/layout/location_event.xml
+++ b/app/src/main/res/layout/location_event.xml
@@ -1,6 +1,211 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="#feebfe"
+    android:fillViewport="false">
 
-</LinearLayout>
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:paddingRight="10dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Title:"
+            android:id="@+id/titleText"
+            android:textSize="20dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="0dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:textColor="#070707"
+            android:textStyle="bold|italic"
+            android:paddingTop="5dp" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/editTitle"
+            android:textSize="20dp"
+            android:textColor="#070707"
+            android:textStyle="bold|italic"
+            android:paddingLeft="10dp"
+            android:layout_toRightOf="@+id/titleText"
+            android:layout_above="@+id/timeText"
+            android:layout_alignTop="@+id/titleText"
+            android:paddingTop="0dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+
+        <View
+            android:layout_width="match_parent"
+            android:id="@+id/seperateLine1"
+            android:layout_height="2dp"
+            android:background="#00FFFF"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/titleText">
+        </View>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:layout_alignLeft="@+id/titleText"
+            android:layout_alignStart="@+id/titleText"
+
+            android:text="Valid until:"
+            android:id="@+id/validText"
+            android:textSize="20dp"
+            android:textColor="#070707"
+            android:textStyle="bold|italic"
+
+            android:layout_below="@+id/seperateLine1"
+            android:paddingTop="5dp" />
+
+        <ImageButton
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:id="@+id/imageButton"
+            android:src="@drawable/Clock"
+            android:scaleType="fitXY"
+            android:layout_below="@+id/editTime"
+            android:layout_alignRight="@+id/titleText"
+            android:layout_alignEnd="@+id/titleText" />
+
+        <TextView
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/editDate"
+            android:text="DD/MM/YYYY"
+            android:textSize="20dp"
+            android:paddingLeft="10dp"
+            android:paddingTop="5dp"
+            android:layout_below="@+id/validText"
+            android:layout_alignLeft="@+id/validText"
+            android:layout_alignStart="@+id/validText" />
+
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/editTime"
+            android:text="HH/MM"
+            android:textSize="20dp"
+            android:paddingLeft="10dp"
+            android:paddingTop="5dp"
+            android:layout_below="@+id/validText"
+            android:layout_alignTop="@+id/editDate"
+            android:layout_alignRight="@+id/editLocation"
+            android:layout_alignEnd="@+id/editLocation" />
+
+        <View
+            android:layout_width="match_parent"
+            android:id="@+id/seperateLine2"
+            android:layout_height="2dp"
+            android:background="#00FFFF"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/imageButton">
+        </View>
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Location:"
+            android:id="@+id/locationText"
+            android:textSize="20dp"
+            android:textColor="#070707"
+            android:textStyle="bold|italic"
+
+            android:paddingTop="5dp"
+            android:layout_below="@+id/seperateLine2"
+            android:layout_alignLeft="@+id/titleText"
+            android:layout_alignStart="@+id/titleText" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/editLocation"
+            android:layout_below="@+id/locationText"
+            android:layout_alignLeft="@+id/locationText"
+            android:layout_alignStart="@+id/locationText"
+            android:lines="1"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+
+        <View
+            android:layout_width="match_parent"
+            android:id="@+id/seperateLine3"
+            android:layout_height="2dp"
+            android:background="#00FFFF"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/editLocation">
+        </View>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Description:"
+            android:id="@+id/descriptionText"
+            android:textSize="20dp"
+            android:textColor="#070707"
+            android:textStyle="bold|italic"
+
+            android:paddingTop="5dp"
+            android:layout_below="@+id/seperateLine3"
+            android:layout_alignLeft="@+id/titleText"
+            android:layout_alignStart="@+id/titleText" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/editDescription"
+            android:layout_below="@+id/descriptionText"
+            android:layout_alignLeft="@+id/descriptionText"
+            android:layout_alignStart="@+id/descriptionText"
+            android:lines="4"
+            android:layout_alignRight="@+id/editLocation"
+            android:layout_alignEnd="@+id/editLocation" />
+
+        <View
+            android:layout_width="match_parent"
+            android:id="@+id/seperateLine4"
+            android:layout_height="2dp"
+            android:background="#00FFFF"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/editDescription">
+        </View>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Photo related:"
+            android:id="@+id/photoText"
+            android:textSize="20dp"
+            android:textColor="#070707"
+            android:textStyle="bold|italic"
+
+            android:paddingTop="5dp"
+            android:layout_below="@+id/seperateLine4"
+            android:layout_alignLeft="@+id/titleText"
+            android:layout_alignStart="@+id/titleText" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageView"
+            android:minHeight="100dp"
+            android:minWidth="200dp"
+            android:layout_below="@+id/photoText"
+            android:layout_centerHorizontal="true" />
+
+
+    </RelativeLayout>
+</ScrollView>
