--- a/app/src/main/res/layout/edit_location.xml
+++ b/app/src/main/res/layout/edit_location.xml
@@ -68,14 +68,14 @@
             android:paddingTop="5dp" />
 
         <ImageButton
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:id="@+id/imageButton"
-            android:src="@drawable/Clock"
+            android:src="@drawable/clock"
             android:scaleType="fitXY"
-            android:layout_below="@+id/editTime"
-            android:layout_alignRight="@+id/titleText"
-            android:layout_alignEnd="@+id/titleText" />
+            android:layout_below="@+id/editTitle"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="false" />
 
         <TextView
             android:layout_width="200dp"
@@ -85,6 +85,8 @@
             android:textSize="20dp"
             android:paddingLeft="10dp"
             android:paddingTop="5dp"
+            android:layout_above="@+id/seperateLine2"
+            android:layout_toLeftOf="@+id/editTime"
             android:layout_below="@+id/validText"
             android:layout_alignLeft="@+id/validText"
             android:layout_alignStart="@+id/validText" />
@@ -131,12 +133,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/editLocation"
+            android:lines="1"
             android:layout_below="@+id/locationText"
             android:layout_alignLeft="@+id/locationText"
             android:layout_alignStart="@+id/locationText"
-            android:lines="1"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+            android:layout_alignRight="@+id/imageView"
+            android:layout_alignEnd="@+id/imageView" />
 
         <View
             android:layout_width="match_parent"
@@ -205,6 +207,19 @@
             android:minWidth="200dp"
             android:layout_below="@+id/photoText"
             android:layout_centerHorizontal="true" />
+
+        <ImageButton
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:id="@+id/imageButton2"
+            android:src="@drawable/googlemap"
+            android:scaleType="fitXY"
+            android:layout_below="@+id/seperateLine2"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignBottom="@+id/editLocation"
+            android:layout_toRightOf="@+id/imageView"
+            android:layout_toEndOf="@+id/imageView" />
 
 
     </RelativeLayout>
