--- a/app/src/main/res/layout/view_time.xml
+++ b/app/src/main/res/layout/view_time.xml
@@ -1,6 +1,313 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="#feebfe"
+    android:fillViewport="false">
 
-</LinearLayout>
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:paddingRight="10dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Title:"
+            android:id="@+id/titleText"
+            android:textSize="20dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="0dp"
+            android:layout_marginStart="20dp"
+            android:textColor="#070707"
+            android:textStyle="bold|italic"
+            android:paddingTop="5dp"
+            android:layout_marginTop="10dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Show Title"
+            android:id="@+id/showTitle"
+            android:textSize="20dp"
+            android:textColor="#070707"
+            android:textStyle="italic"
+            android:paddingTop="5dp"
+            android:layout_above="@+id/seperateLine1"
+            android:layout_toRightOf="@+id/titleText"
+            android:layout_toEndOf="@+id/titleText"
+            android:paddingLeft="10dp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:id="@+id/seperateLine1"
+            android:layout_height="2dp"
+            android:background="#00FFFF"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/titleText">
+        </View>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="Time:"
+            android:id="@+id/timeText"
+            android:textSize="20dp"
+            android:textColor="#070707"
+            android:textStyle="bold|italic"
+            android:paddingTop="5dp"
+
+            android:layout_below="@+id/seperateLine1"
+            android:layout_alignLeft="@+id/titleText"
+            android:layout_alignStart="@+id/titleText" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Show Time"
+            android:id="@+id/showTime"
+            android:textSize="20dp"
+            android:textColor="#070707"
+            android:textStyle="italic"
+            android:paddingTop="5dp"
+
+            android:layout_below="@+id/timeText"
+            android:layout_alignLeft="@+id/timeText"
+            android:layout_alignStart="@+id/timeText" />
+
+        <View
+            android:layout_width="match_parent"
+            android:id="@+id/seperateLine2"
+            android:layout_height="2dp"
+            android:background="#00FFFF"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/showTime">
+        </View>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:layout_alignLeft="@+id/titleText"
+            android:layout_alignStart="@+id/titleText"
+
+            android:text="Repeat:"
+            android:id="@+id/repeat"
+            android:textSize="20dp"
+            android:textColor="#070707"
+            android:textStyle="bold|italic"
+
+            android:layout_below="@+id/seperateLine2"
+            android:paddingTop="5dp" />
+
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Mon"
+            android:id="@+id/monBox"
+            android:checked="false"
+            android:paddingRight="5dp"
+            android:editable="false"
+
+            android:layout_below="@+id/repeat"
+            android:layout_alignLeft="@+id/repeat"
+            android:layout_alignStart="@+id/repeat" />
+
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Tue"
+            android:id="@+id/tueBox"
+            android:checked="false"
+            android:paddingRight="5dp"
+            android:editable="false"
+
+            android:layout_below="@+id/repeat"
+            android:layout_toRightOf="@+id/monBox"
+            android:layout_toEndOf="@+id/monBox" />
+
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Wed"
+            android:id="@+id/wedBox"
+            android:checked="false"
+            android:paddingRight="5dp"
+            android:editable="false"
+
+            android:layout_alignTop="@+id/tueBox"
+            android:layout_toRightOf="@+id/tueBox"
+            android:layout_toEndOf="@+id/tueBox" />
+
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Thur"
+            android:id="@+id/thurBox"
+            android:checked="false"
+            android:paddingRight="5dp"
+            android:editable="false"
+
+            android:layout_alignTop="@+id/wedBox"
+            android:layout_toRightOf="@+id/wedBox"
+            android:layout_toEndOf="@+id/wedBox" />
+
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Fri"
+            android:id="@+id/friBox"
+            android:checked="false"
+            android:paddingRight="5dp"
+            android:editable="false"
+
+            android:layout_alignTop="@+id/thurBox"
+            android:layout_toRightOf="@+id/thurBox"
+            android:layout_toEndOf="@+id/thurBox" />
+
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sat"
+            android:id="@+id/satBox"
+            android:checked="false"
+            android:paddingRight="5dp"
+            android:editable="false"
+
+            android:layout_below="@+id/monBox"
+            android:layout_alignLeft="@+id/monBox"
+            android:layout_alignStart="@+id/monBox" />
+
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sun"
+            android:id="@+id/sunBox"
+            android:checked="false"
+            android:paddingRight="5dp"
+            android:editable="false"
+
+            android:layout_below="@+id/tueBox"
+            android:layout_toRightOf="@+id/repeat"
+            android:layout_toEndOf="@+id/repeat" />
+
+        <View
+            android:layout_width="match_parent"
+            android:id="@+id/seperateLine3"
+            android:layout_height="2dp"
+            android:background="#00FFFF"
+            android:layout_alignBottom="@+id/satBox"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true">
+        </View>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Location:"
+            android:id="@+id/locationText"
+            android:textSize="20dp"
+            android:textColor="#070707"
+            android:textStyle="bold|italic"
+
+            android:paddingTop="5dp"
+            android:layout_below="@+id/seperateLine3"
+            android:layout_alignLeft="@+id/repeat"
+            android:layout_alignStart="@+id/repeat" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Show Location"
+            android:id="@+id/showLocation"
+            android:textSize="20dp"
+            android:textColor="#070707"
+            android:textStyle="italic"
+
+            android:paddingTop="5dp"
+            android:layout_below="@+id/locationText"
+            android:layout_alignLeft="@+id/titleText"
+            android:layout_alignStart="@+id/titleText" />
+
+        <View
+            android:layout_width="match_parent"
+            android:id="@+id/seperateLine4"
+            android:layout_height="2dp"
+            android:background="#00FFFF"
+            android:layout_alignBottom="@+id/showLocation"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true">
+        </View>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Description:"
+            android:id="@+id/descriptionText"
+            android:textSize="20dp"
+            android:textColor="#070707"
+            android:textStyle="bold|italic"
+
+            android:paddingTop="5dp"
+            android:layout_below="@+id/seperateLine4"
+            android:layout_alignLeft="@+id/titleText"
+            android:layout_alignStart="@+id/titleText" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Show Description"
+            android:id="@+id/showDescription"
+            android:textSize="20dp"
+            android:textColor="#070707"
+            android:textStyle="italic"
+            android:paddingTop="5dp"
+
+            android:layout_below="@+id/descriptionText"
+            android:layout_alignLeft="@+id/descriptionText"
+            android:layout_alignStart="@+id/descriptionText"
+            android:gravity="center"
+            android:minWidth="350dp"
+            android:minHeight="100dp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:id="@+id/seperateLine5"
+            android:layout_height="2dp"
+            android:background="#00FFFF"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/showDescription">
+        </View>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Photo related:"
+            android:id="@+id/photoText"
+            android:textSize="20dp"
+            android:textColor="#070707"
+            android:textStyle="bold|italic"
+
+            android:paddingTop="5dp"
+            android:layout_below="@+id/seperateLine5"
+            android:layout_alignLeft="@+id/titleText"
+            android:layout_alignStart="@+id/titleText" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageView"
+            android:minHeight="100dp"
+            android:minWidth="200dp"
+            android:layout_below="@+id/photoText"
+            android:layout_centerHorizontal="true" />
+
+
+    </RelativeLayout>
+</ScrollView>
