--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/edit_time_container" />
+    <include layout="@layout/reminder_list" />
 
 </android.support.design.widget.CoordinatorLayout>
