--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -6,28 +6,44 @@
     >
 
 
-    <EditText
+    <TextView
+        android:layout_width="90dp"
+        android:layout_height="100dp"
+        android:id="@+id/rowTimeText"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:text="try"
+        android:textSize="30dp"
+        android:textColor="#000000" />
+
+    <TextView
         android:layout_width="200dp"
         android:layout_height="50dp"
-        android:id="@+id/text1"
+        android:id="@+id/rowTitleText"
         android:gravity="left|center"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_toStartOf="@+id/switch1"
         android:layout_toLeftOf="@+id/switch1"
-        android:layout_toEndOf="@+id/timeText"
-        android:layout_toRightOf="@+id/timeText" />
+        android:layout_toEndOf="@+id/rowTimeText"
+        android:layout_toRightOf="@+id/rowTimeText"
+        android:text="try"
+        android:textSize="30dp"
+        android:textColor="#000000" />
 
-    <EditText
+    <TextView
         android:layout_width="200dp"
         android:layout_height="50dp"
-        android:id="@+id/text2"
+        android:id="@+id/rowLocationText"
         android:gravity="left"
-        android:layout_below="@+id/text1"
+        android:layout_below="@+id/rowTitleText"
         android:layout_toLeftOf="@+id/switch1"
         android:layout_toStartOf="@+id/switch1"
-        android:layout_toEndOf="@+id/timeText"
-        android:layout_toRightOf="@+id/timeText" />
+        android:layout_toEndOf="@+id/rowTimeText"
+        android:layout_toRightOf="@+id/rowTimeText"
+        android:text="try"
+        android:textSize="30dp"
+        android:textColor="#000000" />
 
     <Switch
         android:layout_width="70dp"
@@ -35,7 +51,7 @@
         android:id="@+id/switch1"
         android:checked="false"
         android:gravity="center"
-        android:layout_alignBottom="@+id/text2"
+        android:layout_alignBottom="@+id/rowLocationText"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
@@ -45,19 +61,14 @@
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:background="#00FFFF"
-        android:layout_below="@+id/text2"
+        android:layout_below="@+id/rowLocationText"
         ></View>
 
     <View
         android:layout_width="2dp"
         android:layout_height="match_parent"
         android:background="#00FFFF"
-        android:layout_alignRight="@+id/timeText"></View>
+        android:layout_alignRight="@+id/rowTimeText"></View>
 
-    <EditText
-        android:layout_width="90dp"
-        android:layout_height="100dp"
-        android:id="@+id/timeText"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true" />
+
 </RelativeLayout>
