--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,16 @@
 
     </android.support.design.widget.AppBarLayout>
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_add_circle_outline_white_3x"
+        android:elevation="6dp"
+        app:pressedTranslationZ="12dp" />
+
     <include layout="@layout/reminder_list" />
 
 </android.support.design.widget.CoordinatorLayout>
