--- a/app/src/main/res/menu/menu_save.xml
+++ b/app/src/main/res/menu/menu_save.xml
@@ -5,15 +5,17 @@
     tools:context="hk.ust.cse.comp4521.reminder.TimeReminderActivity">
 
     <item
+        android:id="@+id/action_cancel"
+        android:icon="@android:drawable/ic_menu_close_clear_cancel"
+        android:title="Cancel"
+        app:showAsAction="always"
+        />
+
+    <item
         android:id="@+id/action_save"
         android:icon="@android:drawable/ic_menu_save"
         android:title="Save"
         app:showAsAction="always" />
 
-    <item
-        android:id="@+id/action_cancel"
-        android:icon="@android:drawable/ic_menu_close_clear_cancel"
-        android:title="Cancel"
-        app:showAsAction="always" />
 
 </menu>
