--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="105dp"
     android:background="#fefeeb"
-    >
+    android:focusable="false">
 
 
     <TextView
