--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,10 +18,11 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay"
-
             />
 
     </android.support.design.widget.AppBarLayout>
+
+    <include layout="@layout/reminder_list" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
@@ -32,8 +33,8 @@
         android:src="@drawable/yellow_plus"
         android:elevation="6dp"
         app:pressedTranslationZ="12dp"
-        android:scaleType="fitXY" />
-
-    <include layout="@layout/reminder_list" />
+        android:scaleType="fitXY"
+        app:layout_behavior="hk.ust.cse.comp4521.reminder.FabHideOnScroll"
+        />
 
 </android.support.design.widget.CoordinatorLayout>
