--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -38,7 +38,7 @@ android:layout_height="fill_parent" >
         android:layout_height="match_parent"
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_below="@id/editLat"
+        android:layout_below="@id/editLatLng"
         />
 
     <TextView
@@ -51,8 +51,8 @@ android:layout_height="fill_parent" >
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_above="@+id/map"
-        android:layout_toLeftOf="@+id/editLat"
-        android:layout_toStartOf="@+id/editLat"
+        android:layout_toLeftOf="@+id/editLatLng"
+        android:layout_toStartOf="@+id/editLatLng"
         android:gravity="center" />
 
 
