long press add marker, search add marker, return result from Map to TimeReminderActivity

--- a/app/src/main/res/layout/edit_time.xml
+++ b/app/src/main/res/layout/edit_time.xml
@@ -239,7 +239,8 @@
             android:layout_alignRight="@+id/editTime"
             android:layout_alignEnd="@+id/editTime"
             android:layout_alignLeft="@+id/locationText"
-            android:layout_alignStart="@+id/locationText" />
+            android:layout_alignStart="@+id/locationText"
+            android:editable="false" />
 
         <View
             android:layout_width="match_parent"
