--- a/app/src/main/res/layout/edit_location.xml
+++ b/app/src/main/res/layout/edit_location.xml
@@ -71,7 +71,7 @@
         <ImageButton
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:id="@+id/imageButton"
+            android:id="@+id/timeButton"
             android:src="@drawable/clock"
             android:scaleType="fitXY"
             android:layout_below="@+id/editTitle"
@@ -103,7 +103,8 @@
             android:layout_below="@+id/validText"
             android:layout_alignTop="@+id/editDate"
             android:layout_alignRight="@+id/editLocation"
-            android:layout_alignEnd="@+id/editLocation" />
+            android:layout_alignEnd="@+id/editLocation"
+            android:layout_alignBottom="@+id/seperateLine2" />
 
         <View
             android:layout_width="match_parent"
@@ -112,7 +113,7 @@
             android:background="#00FFFF"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/imageButton">
+            android:layout_below="@+id/timeButton">
         </View>
 
 
@@ -212,7 +213,7 @@
         <ImageButton
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:id="@+id/imageButton2"
+            android:id="@+id/locationButton"
             android:src="@drawable/googlemap"
             android:scaleType="fitXY"
             android:layout_below="@+id/seperateLine2"
