--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -4,10 +4,10 @@
 
     To get one, follow this link, follow the directions and press "Create" at the end:
 
-    https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend&keyType=CLIENT_SIDE_ANDROID&r=62:D1:74:D1:2B:67:C0:60:1B:2C:48:9D:F3:5A:C1:C1:B8:FF:B7:69%3Bhk.ust.cse.comp4521.reminder
+    https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend&keyType=CLIENT_SIDE_ANDROID&r=31:B3:99:BC:A6:DF:84:97:7D:11:B2:DD:CD:C2:52:37:F9:34:3B:0A%3Bhk.ust.cse.comp4521.reminder
 
     You can also add your credentials to an existing key, using this line:
-    62:D1:74:D1:2B:67:C0:60:1B:2C:48:9D:F3:5A:C1:C1:B8:FF:B7:69;hk.ust.cse.comp4521.reminder
+    31:B3:99:BC:A6:DF:84:97:7D:11:B2:DD:CD:C2:52:37:F9:34:3B:0;hk.ust.cse.comp4521.reminder
 
     Alternatively, follow the directions here:
     https://developers.google.com/maps/documentation/android/start#get-key
@@ -16,6 +16,6 @@
     string in this file.
     -->
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
-        AIzaSyDrsnsMTu_puVB60XJK9LXo2bUe8Fi9nrc
+        AIzaSyBjR4B8n3nv69oVivB2fcxjN0SDHuNrIWg
     </string>
 </resources>
