--- a/app/src/main/res/layout/edit_time.xml
+++ b/app/src/main/res/layout/edit_time.xml
@@ -275,7 +275,8 @@
             android:layout_alignStart="@+id/descriptionText"
             android:layout_alignRight="@+id/friBox"
             android:layout_alignEnd="@+id/friBox"
-            android:lines="10" />
+            android:lines="10"
+            android:gravity="top" />
 
         <View
             android:layout_width="match_parent"
