--- a/app/src/main/res/layout/edit_location.xml
+++ b/app/src/main/res/layout/edit_location.xml
@@ -8,8 +8,8 @@
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:paddingRight="10dp"
-        android:id="@+id/editLocationLayout">
+        android:id="@+id/editLocationLayout"
+        android:paddingRight="10dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -79,32 +79,29 @@
             android:layout_alignParentEnd="false" />
 
         <TextView
-            android:layout_width="200dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/editDate"
             android:text="DD/MM/YYYY"
             android:textSize="20dp"
             android:paddingLeft="10dp"
             android:paddingTop="5dp"
-            android:layout_above="@+id/seperateLine2"
-            android:layout_toLeftOf="@+id/editTime"
             android:layout_below="@+id/validText"
             android:layout_alignLeft="@+id/validText"
-            android:layout_alignStart="@+id/validText" />
+            android:layout_alignStart="@+id/validText"
+            android:enabled="false" />
 
         <TextView
-            android:layout_width="100dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/editTime"
             android:text="HH/MM"
             android:textSize="20dp"
             android:paddingLeft="10dp"
             android:paddingTop="5dp"
-            android:layout_below="@+id/validText"
             android:layout_alignTop="@+id/editDate"
-            android:layout_alignRight="@+id/editLocation"
-            android:layout_alignEnd="@+id/editLocation"
-            android:layout_alignBottom="@+id/seperateLine2" />
+            android:layout_toRightOf="@+id/editDate"
+            android:layout_toEndOf="@+id/editDate" />
 
         <View
             android:layout_width="match_parent"
@@ -175,7 +172,8 @@
             android:layout_alignStart="@+id/descriptionText"
             android:lines="4"
             android:layout_alignRight="@+id/editLocation"
-            android:layout_alignEnd="@+id/editLocation" />
+            android:layout_alignEnd="@+id/editLocation"
+            android:gravity="top" />
 
         <View
             android:layout_width="match_parent"
@@ -208,7 +206,8 @@
             android:minHeight="100dp"
             android:minWidth="200dp"
             android:layout_below="@+id/photoText"
-            android:layout_centerHorizontal="true" />
+            android:layout_toLeftOf="@+id/timeButton"
+            android:layout_toStartOf="@+id/timeButton" />
 
         <ImageButton
             android:layout_width="50dp"
