--- a/app/src/main/res/layout/new_activity_main.xml
+++ b/app/src/main/res/layout/new_activity_main.xml
@@ -10,13 +10,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            android:theme="@style/AppTheme.AppBarOverlay"
-            />
+        <!--<android.support.v7.widget.Toolbar-->
+            <!--android:id="@+id/toolbar"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="?attr/actionBarSize"-->
+            <!--android:background="?attr/colorPrimary"-->
+            <!--android:theme="@style/AppTheme.AppBarOverlay"-->
+            <!--app:popupTheme="@style/AppTheme.PopupOverlay"-->
+            <!--/>-->
 
         <android.support.design.widget.CoordinatorLayout
             android:layout_width="match_parent"
